# ALMA_GUI

./: .gitignore  GUI.py  Model  README.md  model.py  prototype.ipynb  pyproject.toml
Prototypes/: GUI_1.py  GUI_2.py  files_pipeline.ipynb  prototype.ipynb
